Added build files

--- a/assets/css/dashboard.css
+++ b/assets/css/dashboard.css
@@ -1,36 +1,1 @@
-.aaf-dashboard-widget-statictics {
-    margin-left: -12px;
-    margin-right: -12px;
-    margin-top: 12px;
-}
-
-.aaf-dashboard-widget-statictics ul {
-    display: flex;
-    flex-wrap: wrap;
-    margin-bottom: 0;
-}
-
-.aaf-dashboard-widget-statictics ul li {
-	-webkit-box-flex: 1;
-    flex: 1;
-    text-align: center;
-    border-right: 1px solid #eee;
-}
-
-.aaf-applicants-name, .aaf-applicants-email, .aaf-applicants-post-name {
-	display: flex;
-	flex-direction: column;
-	gap: 10px;
-}
-
-.aaf-dashboard-widget-statictics ul li i {
-	font-weight: 500;
-	border-bottom: 1px solid #eee;
-	padding: 10px;
-}
-
-.aaf-widget-title {
-	border-bottom: 1px solid #eee;
-	font-weight: 700;
-	padding: 15px;
-}
+.aaf-dashboard-widget-statictics{margin-left:-12px;margin-right:-12px;margin-top:12px}.aaf-dashboard-widget-statictics ul{display:flex;flex-wrap:wrap;margin-bottom:0}.aaf-dashboard-widget-statictics ul li{flex:1;text-align:center;border-right:1px solid #eee}.aaf-applicants-email,.aaf-applicants-name,.aaf-applicants-post-name{display:flex;flex-direction:column;gap:10px}.aaf-dashboard-widget-statictics ul li i{font-weight:500;border-bottom:1px solid #eee;padding:10px}.aaf-widget-title{border-bottom:1px solid #eee;font-weight:700;padding:15px}
