--- a/assets/css/awesome-application-form.css
+++ b/assets/css/awesome-application-form.css
@@ -1,114 +1,1 @@
-body {
-	background-color: black;
-}
-
-.awesome_application_form_wrap {
-	margin-bottom: 30px;
-    border: 1px solid #dee0e9;
-    padding: 20px;
-    box-sizing: border-box;
-}
-
-.aaf-form-row {
-	display: flex;
-	justify-content: space-between;
-	gap: 20px;
-	margin-top: 10px;
-	margin-bottom: 10px;
-}
-
-.aaf-input-row {
-	flex: 1 0 45%;
-}
-
-.aaf-label {
-    color: #676d8a;
-	font-weight: 700;
-	display: block;
-    font-size: 14px;
-    margin-bottom: 10px;
-    margin-top: 10px;
-	margin-left: 5px;
-}
-
-.aaf-label .required {
-	text-decoration: none;
-    border: none;
-    color: #ff4f55;
-	margin-left: 5px;
-}
-
-.aaf-frontend-field {
-    outline: 0;
-	margin-bottom: 10px;
-}
-
-input[type=text] {
-	border-radius: 2px;
-	border: 1px solid #c0c4d4;
-    transition: all .35s;
-    padding: 10px 15px;
-    background: #fff;
-    color: #676d8a;
-    height: 45px;
-	width: 100%;
-    min-height: 36px;
-    line-height: 1.5;
-	font: inherit;
-}
-
-.aaf-error {
-    background: rgba(255,79,85,.1);
-	display: block;
-    margin: 0 0 10px;
-    padding: 10px 15px;
-    border-top: 3px solid #ff4f55;
-    list-style: none outside;
-    width: auto;
-    word-wrap: break-word;
-    line-height: 1.25;
-    text-transform: none;
-}
-
-.aaf-success {
-	background: rgba(175,223,135,.1);
-	display: block;
-    margin: 0 0 10px;
-    padding: 10px 15px;
-    border-top: 3px solid #ACDF87;
-    list-style: none outside;
-    width: auto;
-    word-wrap: break-word;
-    line-height: 1.25;
-    text-transform: none;
-}
-
-.aaf-file-uploader {
-	display: flex;
-	flex-direction: column;
-	gap: 10px;
-}
-
-.aaf-file-uploaded {
-	display: flex;
-	flex-direction: column;
-	gap: 10px;
-	align-items: flex-start;
-}
-
-.aaf-file-uploaded:hover {
-	svg{
-			stroke: #FF6666;
-			cursor: pointer;
-	}
-}
-
-.aaf-file-details {
-	display: flex;
-    gap: 10px;
-    align-items: center;
-    justify-content: space-between;
-    border: 1px solid blue;
-    padding: 10px;
-    border-radius: 10px;
-}
+.awesome_application_form_wrap{margin-bottom:30px;border:1px solid #dee0e9;padding:20px;box-sizing:border-box}.awesome_application_form_wrap .aaf-form-row{display:flex;justify-content:space-between;gap:20px;margin-top:10px;margin-bottom:10px}.awesome_application_form_wrap .aaf-form-row .aaf-input-row{flex:1 0 45%}.awesome_application_form_wrap .aaf-form-row .aaf-input-row .aaf-label{color:#676d8a;font-weight:700;display:block;font-size:14px;margin-bottom:10px;margin-top:10px;margin-left:5px}.awesome_application_form_wrap .aaf-form-row .aaf-input-row .aaf-label .required{text-decoration:none;border:none;color:#ff4f55;margin-left:5px}.awesome_application_form_wrap .aaf-form-row .aaf-input-row .aaf-frontend-field{outline:0;margin-bottom:10px}.awesome_application_form_wrap .aaf-form-row .aaf-input-row input[type=text]{border-radius:2px;border:1px solid #c0c4d4;transition:all .35s;padding:10px 15px;background:#fff;color:#676d8a;height:45px;width:100%;min-height:36px;line-height:1.5;font:inherit}.awesome_application_form_wrap .aaf-form-row .aaf-input-row.aaf-file-uploader{display:flex;flex-direction:column;gap:10px}.awesome_application_form_wrap .aaf-form-row .aaf-input-row.aaf-file-uploader .aaf-file-uploaded{display:flex;flex-direction:column;gap:10px;align-items:flex-start}.awesome_application_form_wrap .aaf-form-row .aaf-input-row.aaf-file-uploader .aaf-file-uploaded .aaf-file-details{display:flex;gap:10px;align-items:center;justify-content:space-between;border:1px solid #00f;padding:10px;border-radius:10px}.awesome_application_form_wrap .aaf-form-row .aaf-input-row.aaf-file-uploader .aaf-file-uploaded .aaf-file-details .file-name:hover svg{stroke:#f66;cursor:pointer}.awesome_application_form_wrap .aaf-error{background:rgba(255,79,85,.1);display:block;margin:0 0 10px;padding:10px 15px;border-top:3px solid #ff4f55;list-style:none outside;width:auto;word-wrap:break-word;line-height:1.25;text-transform:none}.awesome_application_form_wrap .aaf-success{background:rgba(175,223,135,.1);display:block;margin:0 0 10px;padding:10px 15px;border-top:3px solid #acdf87;list-style:none outside;width:auto;word-wrap:break-word;line-height:1.25;text-transform:none}
